# scratch

vectordb/: .gitignore  README.md  pyproject.toml  run.py
vectordb/commands/: __init__.py  common.py  degrade.py  generate.py  load.py  plot.py  query.py  reindex.py
vectordb/docker/: pgvector.yml
vectordb/results/degradation/: 100k_growth.json  100k_reduction.json  500k_growth.json  500k_reduction.json
vectordb/results/index_creation/: 100k-tuning.json  100k.json  10k.json  250k.json  500k.json  50k.json
vectordb/results/index_creation/v2/: 100k.json  10k.json  250k.json  500k.json  50k.json
vectordb/results/query_throughput/: 100k-tuning.json  100k.json
