[project]
name = "vectordb"
version = "0.1.0"
description = "Vector embedding CLI tool with generate, load, and query functionality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "h5py",
    "numpy",
    "sentence-transformers",
    "tqdm",
    "psycopg[binary]",
]

[project.scripts]
vectordb = "run:main"
